--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "victory-native": "^34.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
     "babel-preset-expo": "~8.0.0",
-    "@babel/core": "^7.0.0"
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0"
   },
   "private": true
 }
