--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^10.0.6",
     "@react-native-community/masked-view": "^0.1.7",
     "apollo-boost": "^0.4.7",
+    "dotenv": "^8.2.0",
     "expo": "~36.0.0",
     "expo-blur": "^8.1.0",
     "graphql": "^15.0.0",
