--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
+    "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-reanimated": "^1.7.0",
