--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^10.0.6",
     "@react-native-community/masked-view": "^0.1.7",
     "apollo-boost": "^0.4.7",
+    "apollo-link-context": "^1.0.20",
     "apollo-link-state": "^0.4.2",
     "dotenv": "^8.2.0",
     "expo": "~36.0.0",
