--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
       "android",
       "web"
     ],
-    "version": "1.0.2",
+    "version": "1.0.3",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -31,6 +31,6 @@
       "package": "com.push.xyz",
       "versionCode": 1
     },
-    "description": ""
+    "description": "Push your way to success"
   }
 }
