--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "expo": "~36.0.0",
     "expo-blur": "^8.1.0",
+    "expo-permissions": "^8.1.0",
     "graphql": "^15.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
