--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
+    "react-native-sticky-parallax-header": "^0.2.1",
     "react-native-svg": "9.13.3",
     "react-native-swipe-list-view": "^3.0.0",
     "react-native-web": "~0.11.7",
