--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "apollo-link-state": "^0.4.2",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
-    "expo": "~36.0.0",
+    "expo": "^36.0.2",
     "expo-blur": "^8.1.0",
+    "expo-haptics": "^8.1.0",
     "expo-permissions": "^8.1.0",
     "graphql": "^15.0.0",
+    "install": "^0.13.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
