--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.4",
-    "@expo/vector-icons": "^10.0.6",
+    "@expo/vector-icons": "^10.0.0",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/masked-view": "^0.1.7",
     "apollo-boost": "^0.4.7",
@@ -17,7 +17,7 @@
     "apollo-link-state": "^0.4.2",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
-    "expo": "~36.0.0",
+    "expo": "^37.0.12",
     "expo-blur": "^8.1.0",
     "expo-permissions": "^8.1.0",
     "graphql": "^15.0.0",
@@ -26,7 +26,7 @@
     "native-base": "^2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native": "0.61.5",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
     "react-native-fontawesome": "^7.0.0",
@@ -38,7 +38,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
-    "react-native-sticky-parallax-header": "^0.2.1",
+    "react-native-sticky-parallax-header": "0.1.0",
     "react-native-svg": "9.13.3",
     "react-native-swipe-list-view": "^3.0.0",
     "react-native-web": "~0.11.7",
