--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-chart-kit": "^5.6.0",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
     "react-native-fontawesome": "^7.0.0",
