--- a/app.json
+++ b/app.json
@@ -25,6 +25,9 @@
       "package": "com.push.xyz",
       "versionCode": 1
     },
-    "description": "Push your way to success"
+    "description": "Push your way to success",
+    "notification": {
+      "icon": "./assets/icon.png"
+    }
   }
 }
