--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-chart-kit": "^5.6.0",
     "react-native-confetti-cannon": "^1.5.0",
+    "react-native-date-picker": "^2.7.10",
+    "react-native-datepicker": "^1.7.2",
     "react-native-dotenv": "^0.2.0",
     "react-native-drawer": "^2.5.1",
     "react-native-elements": "^1.2.7",
