--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@apollo/react-hooks": "^3.1.4",
     "@expo/vector-icons": "^10.0.0",
     "@react-native-community/art": "^1.2.0",
+    "@react-native-community/datetimepicker": "2.1.0",
     "@react-native-community/masked-view": "^0.1.7",
     "apollo-boost": "^0.4.7",
     "apollo-link-context": "^1.0.20",
