--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-neomorph-shadows": "^1.0.3",
     "react-native-paper": "^3.8.0",
     "react-native-progress-circle": "^2.1.0",
+    "react-native-push-notification-popup": "^1.6.0",
     "react-native-really-awesome-button": "^1.6.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
