--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dotenv": "^8.2.0",
     "expo": "^36.0.2",
     "expo-blur": "^8.1.0",
-    "expo-google-sign-in": "~8.0.0",
+    "expo-google-app-auth": "^8.1.3",
     "expo-haptics": "^8.1.0",
     "expo-permissions": "^8.1.0",
     "graphql": "^15.0.0",
